kitap ekle sil kısmı nav'a eklendi

--- a/addBooks.html
+++ b/addBooks.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>contact us</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
+   <title>register</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -19,7 +20,10 @@
 
    <section class="flex">
 
-      <a href="home.html" class="logo">yum-yum 😋</a>
+      <a href="home.html" class="logo">
+         <i class="ri-book-3-line"></i>
+         Book Library
+      </a>
 
       <nav class="navbar">
          <a href="home.html">home</a>
@@ -42,40 +46,27 @@
             <a href="profile.html" class="btn">profile</a>
             <a href="#" class="delete-btn">logout</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
 
 </header>
 
-<div class="heading">
-   <h3>contact us</h3>
-   <p><a href="home.html">home </a> <span> / contact</span></p>
-</div>
+<section class="form-container">
 
-<section class="contact">
-
-   <div class="row">
-
-      <div class="image">
-         <img src="images/contact-img.svg" alt="">
-      </div>
-
-      <form action="" method="post">
-         <h3>tell us something!</h3>
-         <input type="text" name="name" required placeholder="enter your name" maxlength="50" class="box">
-         <input type="number" name="number" required placeholder="enter your number" max="9999999999" min="0" class="box" onkeypress="if(this.value.length == 10) return false;">
-         <input type="email" name="email" required placeholder="enter your email" maxlength="50" class="box">
-         <textarea name="msg" placeholder="enter your message" required class="box" cols="30" rows="10" maxlength="500"></textarea>
-         <input type="submit" value="send message" class="btn" name="send">
-      </form>
-
-   </div>
+   <form action="" method="post">
+      <h3>register now</h3>
+      <input type="text" required maxlength="20" name="name" placeholder="enter your name" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="email" required maxlength="50" name="email" placeholder="enter your email" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="numner" min="0" max="9999999999" onkeypress="if(this.value.length == 10) return false;" placeholder="enter your number" required class="box" name="number">
+      <input type="password" required maxlength="20" name="pass" placeholder="enter your password" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="password" required maxlength="20" name="cpass" placeholder="confirm your password" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="submit" value="regisetr now" class="btn" name="submit">
+      <p>already have an account? <a href="login.html">login now</a></p>
+   </form>
 
 </section>
-
-
 
 
 
