--- a/home.html
+++ b/home.html
@@ -32,7 +32,6 @@
          <a href="home.html">Home</a>
          <a href="about.html">About</a>
          <a href="listBooks.html">List All Books</a>
-         <a href="addBooks.html">Add Books</a>
          <a href="removeBooks.html">Remove Books</a>
       </nav>
 
@@ -46,10 +45,10 @@
       <div class="profile">
          <p class="name">shaikh anas</p>
          <div class="flex">
-            <a href="profile.html" class="btn">profile</a>
-            <a href="#" class="delete-btn">logout</a>
+            <a href="addBooks.html" class="btn">Add Books</a>
+            <a href="removeBooks.html" class="delete-btn">Remove Books</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
