--- a/search.html
+++ b/search.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
    <title>search page</title>
 
    <!-- font awesome cdn link  -->
@@ -19,7 +20,10 @@
 
    <section class="flex">
 
-      <a href="home.html" class="logo">yum-yum 😋</a>
+      <a href="home.html" class="logo">
+         <i class="ri-book-3-line"></i>
+         Book Library
+      </a>
 
       <nav class="navbar">
          <a href="home.html">home</a>
@@ -42,7 +46,7 @@
             <a href="profile.html" class="btn">profile</a>
             <a href="#" class="delete-btn">logout</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
