--- a/checkout.html
+++ b/checkout.html
@@ -19,7 +19,10 @@
 
    <section class="flex">
 
-      <a href="home.html" class="logo">yum-yum 😋</a>
+      <a href="home.html" class="logo">
+         <i class="ri-book-3-line"></i>
+         Book Library
+      </a>
 
       <nav class="navbar">
          <a href="home.html">home</a>
@@ -40,9 +43,9 @@
          <p class="name">shaikh anas</p>
          <div class="flex">
             <a href="profile.html" class="btn">profile</a>
-            <a href="register.html" class="delete-btn">Remove Books</a>
+            <a href="addBook.html" class="delete-btn">Remove Books</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
