--- a/listBooks.html
+++ b/listBooks.html
@@ -5,6 +5,8 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>food menu</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
+
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -19,7 +21,10 @@
 
    <section class="flex">
 
-      <a href="home.html" class="logo">yum-yum 😋</a>
+      <a href="home.html" class="logo">
+         <i class="ri-book-3-line"></i>
+         Book Library
+      </a>
 
       <nav class="navbar">
          <a href="home.html">home</a>
@@ -42,7 +47,7 @@
             <a href="profile.html" class="btn">profile</a>
             <a href="#" class="delete-btn">logout</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
