--- a/removeBooks.html
+++ b/removeBooks.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>my orders</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
+   <title>login</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -19,7 +20,10 @@
 
    <section class="flex">
 
-      <a href="home.html" class="logo">yum-yum 😋</a>
+      <a href="home.html" class="logo">
+         <i class="ri-book-3-line"></i>
+         Book Library
+      </a>
 
       <nav class="navbar">
          <a href="home.html">home</a>
@@ -42,52 +46,24 @@
             <a href="profile.html" class="btn">profile</a>
             <a href="#" class="delete-btn">logout</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="register.html">register</a></p>
+         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
 
 </header>
 
-<div class="heading">
-   <h3>your orders</h3>
-   <p><a href="home.html">home </a> <span> / orders</span></p>
-</div>
+<section class="form-container">
 
-<section class="orders">
-
-   <h1 class="title">placed orders</h1>
-
-   <div class="box-container">
-
-      <div class="box">
-         <p> placed on : <span>5-29-2022</span> </p>
-         <p> name : <span>shaikh anas</span> </p>
-         <p> number : <span>1234567899</span> </p>
-         <p> email : <span>shaikhanas@gmail.com</span> </p>
-         <p> address : <span>jogeshwari, mumbai, india - 400103</span> </p>
-         <p> your orders : <span>pizza 01 (1) - main dish 02 (3) -</span> </p>
-         <p> total price : <span>$12/-</span> </p>
-         <p> payment method : <span>cash on delivery</span> </p>
-         <p> payment status : <span>pending</span> </p>
-      </div>
-
-      <div class="box">
-         <p> placed on : <span>5-29-2022</span> </p>
-         <p> name : <span>shaikh anas</span> </p>
-         <p> number : <span>1234567899</span> </p>
-         <p> email : <span>shaikhanas@gmail.com</span> </p>
-         <p> address : <span>jogeshwari, mumbai, india - 400103</span> </p>
-         <p> your orders : <span>pizza 01 (1) - main dish 02 (3) -</span> </p>
-         <p> total price : <span>$12/-</span> </p>
-         <p> payment method : <span>cash on delivery</span> </p>
-         <p> payment status : <span>pending</span> </p>
-      </div>
-
-   </div>
+   <form action="" method="post">
+      <h3>login now</h3>
+      <input type="email" required maxlength="50" name="email" placeholder="enter your email" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="password" required maxlength="20" name="pass" placeholder="enter your password" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="submit" value="login now" class="btn" name="submit">
+      <p>don't have an account? <a href="addBook.html">register now</a></p>
+   </form>
 
 </section>
-
 
 
 
