--- a/home.html
+++ b/home.html
@@ -32,7 +32,6 @@
          <a href="home.html">Home</a>
          <a href="about.html">About</a>
          <a href="listBooks.html">List All Books</a>
-         <a href="removeBooks.html">Remove Books</a>
       </nav>
 
       <div class="icons">
@@ -43,17 +42,38 @@
       </div>
 
       <div class="profile">
-         <p class="name">shaikh anas</p>
+         <p class="name">Kitap işlemleri</p>
          <div class="flex">
             <a href="addBooks.html" class="btn">Add Books</a>
             <a href="removeBooks.html" class="delete-btn">Remove Books</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
 
 </header>
+
+
+<div class="heading">
+   <h3>WELCOME</h3>
+</div>
+<section class="about">
+
+   <div class="row">
+
+      <div class="image">
+         <img src="images/ai_lib.jpg" alt="">
+      </div>
+
+      <div class="content">
+         <br><br>
+         <p>Kültür; okumak, anlamak, görebilmek, görebildiğinden mana çıkarmak, uyanık davranmak, düşünmek, zekayı terbiye etmektir.</p>
+         <a href="menu.html" class="btn">our menu</a>
+      </div>
+
+   </div>
+
+</section>
 
 <section class="home">
 
@@ -63,34 +83,34 @@
 
          <div class="swiper-slide slide">
             <div class="content">
-               <span>order online</span>
-               <h3>delicious pizza</h3>
-               <a href="menu.html" class="btn">see menus</a>
+               <span>Premchand S. Nair - July 27, 2017</span>
+               <h3>JAVA programming Fundamentals</h3>
+               <a href="listBooks.html" class="btn">see books</a>
             </div>
             <div class="image">
-               <img src="images/home-img-1.png" alt="">
+               <img src="images/java img.jpg" alt="">
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="content">
-               <span>order online</span>
-               <h3>double hamburger</h3>
-               <a href="menu.html" class="btn">see menus</a>
+               <span>Justin Hickey - July 29, 2021</span>
+               <h3>Learning The C++ Programming Language</h3>
+               <a href="listBooks.html" class="btn">see books</a>
             </div>
             <div class="image">
-               <img src="images/home-img-2.png" alt="">
+               <img src="images/c++ img.jpg" alt="">
             </div>
          </div>
 
          <div class="swiper-slide slide">
             <div class="content">
-               <span>order online</span>
-               <h3>roasted chicken</h3>
-               <a href="menu.html" class="btn">see menus</a>
+               <span>Anthony Brun - May 20, 2018</span>
+               <h3>Python Programming a step by step guide from beginner to expert</h3>
+               <a href="menu.html" class="btn">see books</a>
             </div>
             <div class="image">
-               <img src="images/home-img-3.png" alt="">
+               <img src="images/python img.jpg" alt="">
             </div>
          </div>
 
@@ -102,141 +122,6 @@
 
 </section>
 
-<section class="category">
-
-   <h1 class="title">food category</h1>
-
-   <div class="box-container">
-
-      <a href="category.html" class="box">
-         <img src="images/cat-1.png" alt="">
-         <h3>fast food</h3>
-      </a>
-   
-      <a href="category.html" class="box">
-         <img src="images/cat-2.png" alt="">
-         <h3>main dishes</h3>
-      </a>
-   
-      <a href="category.html" class="box">
-         <img src="images/cat-3.png" alt="">
-         <h3>drinks</h3>
-      </a>
-   
-      <a href="category.html" class="box">
-         <img src="images/cat-4.png" alt="">
-         <h3>desserts</h3>
-      </a>
-
-   </div>
-
-</section>
-
-<section class="products">
-
-   <h1 class="title">latest dishes</h1>
-
-   <div class="box-container">
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/pizza-1.png" alt="">
-         <a href="category.html" class="cat">fast food</a>
-         <div class="name">delicious pizza 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dish-1.png" alt="">
-         <a href="category.html" class="cat">dishes</a>
-         <div class="name">main dish 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/burger-1.png" alt="">
-         <a href="category.html" class="cat">fast food</a>
-         <div class="name">chezzy hamburger 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dessert-1.png" alt="">
-         <a href="category.html" class="cat">dessert</a>
-         <div class="name">delicious dessert 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/drink-1.png" alt="">
-         <a href="category.html" class="cat">drinks</a>
-         <div class="name">fresh drink 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dish-2.png" alt="">
-         <a href="category.html" class="cat">dishes</a>
-         <div class="name">main dish 02</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-   </div>
-
-   <div class="more-btn">
-      <a href="menu.html" class="btn">veiw all</a>
-   </div>
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <footer class="footer">
 
    <section class="box-container">
@@ -244,32 +129,32 @@
       <div class="box">
          <img src="images/email-icon.png" alt="">
          <h3>our email</h3>
-         <a href="mailto:shaikhanas@gmail.com">shaikhanas@gmail.com</a>
-         <a href="mailto:anasbhai@gmail.com">anasbhai@gmail.com</a>
+         <a href="mailto:240501040@kocaelisaglik.edu.tr">240501040@kocaelisaglik.edu.tr</a>
+         <a href="mailto:240501037@kocaelisaglik.edu.tr">240501037@kocaelisaglik.edu.tr</a>
       </div>
 
       <div class="box">
          <img src="images/clock-icon.png" alt="">
          <h3>opening hours</h3>
-         <p>00:07am to 00:10pm </p>
+         <p>24 hours, 7 days</p>
       </div>
 
       <div class="box">
          <img src="images/map-icon.png" alt="">
          <h3>our address</h3>
-         <a href="https://www.google.com/maps">mumbai, india - 400104</a>
+         <a href="https://www.google.com/maps">Kocaeli, Türkiye - 400104</a>
       </div>
 
       <div class="box">
          <img src="images/phone-icon.png" alt="">
          <h3>our number</h3>
-         <a href="tel:1234567890">+123-456-7890</a>
-         <a href="tel:1112223333">+111-222-3333</a>
+         <a href="">+90-222-2222</a>
+         <a href="">+90-222-2220</a>
       </div>
 
    </section>
 
-   <div class="credit">&copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!</div>
+   <div class="credit"><span>book library</span> | by Rümeysa & Gizem</div>
 
 </footer>
 
