--- a/addBooks.html
+++ b/addBooks.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
-   <title>register</title>
+   <title>Add Books</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -26,27 +26,23 @@
       </a>
 
       <nav class="navbar">
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="menu.html">menu</a>
-         <a href="orders.html">orders</a>
-         <a href="contact.html">contact</a>
+         <a href="home.html">Home</a>
+         <a href="about.html">About</a>
       </nav>
 
       <div class="icons">
-         <a href="search.html"><i class="fas fa-search"></i></a>
-         <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(3)</span></a>
-         <div id="user-btn" class="fas fa-user"></div>
+         <a href="search.html"><i class="ri-search-2-line"></i></a>
+         <i class="ri-increase-decrease-line" id="user-btn"></i>
+         <i class="ri-moon-line change-theme" id="theme-button"></i>
          <div id="menu-btn" class="fas fa-bars"></div>
       </div>
 
       <div class="profile">
-         <p class="name">shaikh anas</p>
+         <p class="name">Kitap işlemleri</p>
          <div class="flex">
-            <a href="profile.html" class="btn">profile</a>
-            <a href="#" class="delete-btn">logout</a>
+            <a href="addBooks.html" class="btn">Add Books</a>
+            <a href="removeBooks.html" class="delete-btn">Remove Books</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
@@ -56,40 +52,15 @@
 <section class="form-container">
 
    <form action="" method="post">
-      <h3>register now</h3>
-      <input type="text" required maxlength="20" name="name" placeholder="enter your name" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
-      <input type="email" required maxlength="50" name="email" placeholder="enter your email" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
-      <input type="numner" min="0" max="9999999999" onkeypress="if(this.value.length == 10) return false;" placeholder="enter your number" required class="box" name="number">
-      <input type="password" required maxlength="20" name="pass" placeholder="enter your password" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
-      <input type="password" required maxlength="20" name="cpass" placeholder="confirm your password" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
-      <input type="submit" value="regisetr now" class="btn" name="submit">
-      <p>already have an account? <a href="login.html">login now</a></p>
+      <h3>ADD BOOK</h3>
+      <input type="text" required maxlength="20" name="book name" placeholder="enter book name" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="text" required maxlength="20" name="author name" placeholder="enter author name" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="date" name="publish date" placeholder="enter publish date" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="image" name="book cover" placeholder="enter book cover" class="box" oninput="this.value = this.value.replace(/\s/g, '')">
+      <input type="submit" value="ADD BOOK" class="btn" name="submit">
    </form>
 
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <footer class="footer">
 
@@ -98,37 +69,37 @@
       <div class="box">
          <img src="images/email-icon.png" alt="">
          <h3>our email</h3>
-         <a href="mailto:shaikhanas@gmail.com">shaikhanas@gmail.com</a>
-         <a href="mailto:anasbhai@gmail.com">anasbhai@gmail.com</a>
+         <a href="mailto:240501040@kocaelisaglik.edu.tr">240501040@kocaelisaglik.edu.tr</a>
+         <a href="mailto:240501037@kocaelisaglik.edu.tr">240501037@kocaelisaglik.edu.tr</a>
       </div>
 
       <div class="box">
          <img src="images/clock-icon.png" alt="">
          <h3>opening hours</h3>
-         <p>00:07am to 00:10pm </p>
+         <p>24 hours, 7 days</p>
       </div>
 
       <div class="box">
          <img src="images/map-icon.png" alt="">
          <h3>our address</h3>
-         <a href="https://www.google.com/maps">mumbai, india - 400104</a>
+         <a href="https://www.google.com/maps">Kocaeli, Türkiye - 400104</a>
       </div>
 
       <div class="box">
          <img src="images/phone-icon.png" alt="">
          <h3>our number</h3>
-         <a href="tel:1234567890">+123-456-7890</a>
-         <a href="tel:1112223333">+111-222-3333</a>
+         <a href="">+90-222-2222</a>
+         <a href="">+90-222-2220</a>
       </div>
 
    </section>
 
-   <div class="credit">&copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!</div>
+   <div class="credit"><span>book library</span> | by Rümeysa & Gizem</div>
 
 </footer>
 
 <div class="loader">
-   <img src="images/loader.gif" alt="">
+   <img src="images/books.gif" alt="">
 </div>
 
 <script src="js/script.js"></script>
