--- a/listBooks.html
+++ b/listBooks.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>food menu</title>
+   <title>ListBooks</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.5.0/remixicon.css" />
 
 
@@ -27,27 +27,23 @@
       </a>
 
       <nav class="navbar">
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="menu.html">menu</a>
-         <a href="orders.html">orders</a>
-         <a href="contact.html">contact</a>
+         <a href="home.html">Home</a>
+         <a href="about.html">About</a>
       </nav>
 
       <div class="icons">
-         <a href="search.html"><i class="fas fa-search"></i></a>
-         <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(3)</span></a>
-         <div id="user-btn" class="fas fa-user"></div>
+         <a href="search.html"><i class="ri-search-2-line"></i></a>
+         <i class="ri-increase-decrease-line" id="user-btn"></i>
+         <i class="ri-moon-line change-theme" id="theme-button"></i>
          <div id="menu-btn" class="fas fa-bars"></div>
       </div>
 
       <div class="profile">
-         <p class="name">shaikh anas</p>
+         <p class="name">Kitap işlemleri</p>
          <div class="flex">
-            <a href="profile.html" class="btn">profile</a>
-            <a href="#" class="delete-btn">logout</a>
+            <a href="addBooks.html" class="btn">Add Books</a>
+            <a href="removeBooks.html" class="delete-btn">Remove Books</a>
          </div>
-         <p class="account"><a href="login.html">login</a> or <a href="addBook.html">register</a></p>
       </div>
 
    </section>
@@ -55,7 +51,7 @@
 </header>
 
 <div class="heading">
-   <h3>our menu</h3>
+   <h3>All Books</h3>
    <p><a href="home.html">home </a> <span> / menu</span></p>
 </div>
 
@@ -68,13 +64,10 @@
       <form accept="" method="post" class="box">
          <a href="quick_view.html" class="fas fa-eye"></a>
          <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/pizza-1.png" alt="">
+         <img src="images/c++ img.jpg" alt="">
          <a href="category.html" class="cat">fast food</a>
-         <div class="name">delicious pizza 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
+         <div class="name">Learning The C++</div>
+         <div class="flex"></div>
       </form>
 
       <form accept="" method="post" class="box">
@@ -83,10 +76,7 @@
          <img src="uploaded_img/dish-1.png" alt="">
          <a href="category.html" class="cat">dishes</a>
          <div class="name">main dish 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
+         <div class="flex"></div>
       </form>
 
       <form accept="" method="post" class="box">
@@ -95,110 +85,11 @@
          <img src="uploaded_img/burger-1.png" alt="">
          <a href="category.html" class="cat">fast food</a>
          <div class="name">chezzy hamburger 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
+         <div class="flex"></div>
       </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dessert-1.png" alt="">
-         <a href="category.html" class="cat">dessert</a>
-         <div class="name">delicious dessert 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/drink-1.png" alt="">
-         <a href="category.html" class="cat">drinks</a>
-         <div class="name">fresh drink 01</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dish-2.png" alt="">
-         <a href="category.html" class="cat">dishes</a>
-         <div class="name">main dish 02</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/burger-2.png" alt="">
-         <a href="category.html" class="cat">fast food</a>
-         <div class="name">chezzy hamburger 02</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/pizza-2.png" alt="">
-         <a href="category.html" class="cat">fast food</a>
-         <div class="name">delicious pizza 02</div>
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
-      <form accept="" method="post" class="box">
-         <a href="quick_view.html" class="fas fa-eye"></a>
-         <button class="fas fa-shopping-cart" type="submit" name="add_to_cart"></button>
-         <img src="uploaded_img/dessert-2.png" alt="">
-         <a href="category.html" class="cat">dessert</a>
-         <div class="name">delicious dessert 02</div  >
-         <div class="flex">
-            <div class="price"><span>$</span>3<span>/-</span></div>
-            <input type="number" name="qty" class="qty" min="1" max="99" value="1" onkeypress="if(this.value.length == 2) return false;">
-         </div>
-      </form>
-
    </div>
 
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <footer class="footer">
 
@@ -207,37 +98,37 @@
       <div class="box">
          <img src="images/email-icon.png" alt="">
          <h3>our email</h3>
-         <a href="mailto:shaikhanas@gmail.com">shaikhanas@gmail.com</a>
-         <a href="mailto:anasbhai@gmail.com">anasbhai@gmail.com</a>
+         <a href="mailto:240501040@kocaelisaglik.edu.tr">240501040@kocaelisaglik.edu.tr</a>
+         <a href="mailto:240501037@kocaelisaglik.edu.tr">240501037@kocaelisaglik.edu.tr</a>
       </div>
 
       <div class="box">
          <img src="images/clock-icon.png" alt="">
          <h3>opening hours</h3>
-         <p>00:07am to 00:10pm </p>
+         <p>24 hours, 7 days</p>
       </div>
 
       <div class="box">
          <img src="images/map-icon.png" alt="">
          <h3>our address</h3>
-         <a href="https://www.google.com/maps">mumbai, india - 400104</a>
+         <a href="https://www.google.com/maps">Kocaeli, Türkiye - 400104</a>
       </div>
 
       <div class="box">
          <img src="images/phone-icon.png" alt="">
          <h3>our number</h3>
-         <a href="tel:1234567890">+123-456-7890</a>
-         <a href="tel:1112223333">+111-222-3333</a>
+         <a href="">+90-222-2222</a>
+         <a href="">+90-222-2220</a>
       </div>
 
    </section>
 
-   <div class="credit">&copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!</div>
+   <div class="credit"><span>book library</span> | by Rümeysa & Gizem</div>
 
 </footer>
 
 <div class="loader">
-   <img src="images/loader.gif" alt="">
+   <img src="images/books.gif" alt="">
 </div>
 
 <script src="js/script.js"></script>
